--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "next": "$next"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
-    "@sentry/nextjs": "^8.50.0",
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
